fix: The cross button in location modal should be right aligned inside the input box

--- a/src/app/shared/components/fy-location/fy-location-modal/fy-location-modal.component.scss
+++ b/src/app/shared/components/fy-location/fy-location-modal/fy-location-modal.component.scss
@@ -42,7 +42,6 @@
     }
 
     &-close {
-      margin: -12px;
       font-size: 18px;
       height: auto;
     }
@@ -114,7 +113,6 @@
     mat-form-field {
       ::ng-deep .mat-mdc-text-field-wrapper {
         padding-left: 10px;
-        padding-right: 10px;
       }
 
       ::ng-deep .mat-icon {
